fix: fix background jumping bug

--- a/src/app/components/App.scss
+++ b/src/app/components/App.scss
@@ -3,6 +3,7 @@
 html {
   height: 100%;
   width: 100%;
+
   &::-webkit-scrollbar {
     width: 10px;
     height: 10px;
@@ -13,6 +14,10 @@ html {
     border-radius: 3px;
     background: #aaa;
   }
+}
+
+* {
+  outline: none !important;
 }
 
 body {
