--- a/src/app/components/Board/Board.scss
+++ b/src/app/components/Board/Board.scss
@@ -1,8 +1,10 @@
 @import "../../variables.scss";
 
 .board {
-  height: 100%;
-  min-width: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
+  min-width: 100vw;
+  min-height: 100vh;
 }
 
 .board-underlay {
