--- a/src/app/components/CardAdder/CardAdder.scss
+++ b/src/app/components/CardAdder/CardAdder.scss
@@ -19,6 +19,11 @@
   box-shadow: 1px 1px 1px -1px gray;
 }
 
+.card-adder-textarea:focus {
+  outline: none;
+  border-radius: 3px;
+}
+
 #add-icon {
   margin: 0px 0px 0px 7px;
 }
@@ -48,6 +53,7 @@
   .MuiButton-label {
     color: rgb(75, 75, 75);
   }
+
   // background: #4caf50;
   // box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
   //   0 17px 50px 0 rgba(0, 0, 0, 0.19);
