--- a/src/app/components/List/List.scss
+++ b/src/app/components/List/List.scss
@@ -19,21 +19,22 @@
   margin: 0 5px 0 5px;
   border-radius: $list-radius;
   font-size: 14px;
+  background-color:  $transparent-gray;
   transition: box-shadow 0.15s, background 0.3s;
 }
 
-.blue .list {
-  background: $transparent-blue;
-}
-.green .list {
-  background: $transparent-green;
-}
-.red .list {
-  background: $transparent-red;
-}
-.pink .list {
-  background: $transparent-pink;
-}
+// .blue .list {
+//   background: $transparent-blue;
+// }
+// .green .list {
+//   background: $transparent-green;
+// }
+// .red .list {
+//   background: $transparent-red;
+// }
+// .pink .list {
+//   background: $transparent-pink;
+// }
 
 .list--drag {
   box-shadow: 1px 3px 8px 2px rgba(0, 0, 0, 0.3) !important;
