--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -13,7 +13,7 @@ $dark-pink: #a05;
 $transparent-green: #76b9b2;
 $transparent-blue: #57809e;
 $transparent-red: #ef4339;
-$transparent-pink: #ebecf0;
+$transparent-pink: #f9989f;
 $transparent-gray: #ebecf0;
 
 $success-button-color: #61d4b3;
